--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
      <title>CV-Damien</title>
 </head>
-
-<body>
-
+<body id="header">
     <div id="page-wrap">
     
 		<img src="images/3_hipo1.jpg" alt="Photo de masque" id="pic" />
@@ -98,7 +96,7 @@
 
 		<a rel="nofollow" href="http://www.facebook.com/" target="_blank">Facebook</a> | 
 
-		<a rel="nofollow" href="http://www.makeawebsiteguru.com/" title="Make a Website" target="_blank">Make a Website</a> | 
+		<a rel="nofollow" href="#" title="Make a Website" target="_blank">Make the code</a> | 
 
 			<a href="http://galleryrush.com" title="CSS Gallery Submission" target="_blank">Youtube</a> | 
 		
