--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
      <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
-     <title>CV-Damien</title>
+     <title>CV of Dam's</title>
 </head>
 <body id="header">
     <div id="page-wrap">
