--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
             <p>
                 Cell: <span class="tel"></span><br /> 
-				Email: <a class="email" href="mailto:damsDev@gmail.com">damsDev@gmail.com</a>
+				Email: <a class="email" href="mailto:damsDevRaiii">damsDev@gmail.com</a>
             </p>
         </div>
                 
