update css and index for img fork

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
      <title>CV of Dam's</title>
 </head>
 <body id="header">
+	<a class="forkme" href="https://github.com/DamsDev93/" target="_blank">
+		<img alt="Fork me on GitHub" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png">
+	</a>    
     <div id="page-wrap">
     
 		<img src="img/3_hipo1.jpg" alt="Photo de masque" id="pic" />
@@ -21,8 +24,7 @@
                 Cell: <span class="tel"></span><br /> 
 				Email: <a class="email" href="mailto:damsDev@gmal.com">damsDev@gmail.com</a>
             </p>
-        </div>
-                
+        </div>            
         <div id="objective">
             <p>
                 I am an outgoing and energetic (ask anybody) young professional, seeking a 
