--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
     
     </div>
 	<div id="footer">
-		<p><a rel="nofollow" target="_blank" href="#">Mon site</a> | <a rel="nofollow" target="_blank" href="https://twitter.com/">Twitter</a> | 
+		<p><a rel="nofollow" target="_blank" href="#">Mon site</a> | <a rel="nofollow" target="_blank" href="https://twitter.com/DamsDev93">Twitter</a> | 
 
-		<a rel="nofollow" href="http://www.facebook.com/" target="_blank">Facebook</a> | 
+		<a rel="nofollow" href="#" target="_blank">Facebook</a> | 
 
 		<a rel="nofollow" href="#" title="Make a Website" target="_blank">Make the code</a> | 
 
-			<a href="http://youtube.com" title="CSS Gallery Submission" target="_blank">Youtube</a> | 
+			<a href="#" title="CSS Gallery Submission" target="_blank">Youtube</a> | 
 		
 			<a href="#header" title="Back to Top" class="top-btn">Back to Top</a>
 <br>©  2014-2015 Cataldo Damien. All rights reserved.</p>
